--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,9 @@
 
 body {
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-		"Helvetica Neue", sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
@@ -123,6 +123,8 @@ strong {
 	grid-template-columns: repeat(3, 1fr);
 	padding: 0.5rem;
 	background: var(--font-color-4);
+	max-width: 95%;
+	margin: auto;
 }
 
 .add-cart {
@@ -166,6 +168,7 @@ strong {
 	margin-left: auto;
 	margin-right: auto;
 	border-radius: 10px;
+	max-width: 95%;
 	transition: all 0.9s ease-in-out;
 }
 
